# dds-fpga-ticker-client

./: CMakeLists.txt  README.md  fpga_sender.cpp  fpga_sender.h  fpga_ticker_client_wx_app.cpp  fpga_ticker_client_wx_app.h  fpga_ticker_client_wx_frame.cpp  fpga_ticker_client_wx_frame.h  main.cpp  send_event.cpp  send_event.h  serial_device.cpp  serial_device.h
